--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LoginViewControler" id="BYZ-38-t0r" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -149,6 +149,11 @@
                         <viewLayoutGuide key="safeArea" id="W3j-0V-bTJ"/>
                     </view>
                     <navigationItem key="navigationItem" id="Lef-vb-4bJ">
+                        <barButtonItem key="leftBarButtonItem" title="Logout" id="u1s-JS-JDb">
+                            <connections>
+                                <action selector="onLogoutButton:" destination="2Of-BZ-7dq" id="77m-yM-HMf"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="insta_camera_btn" id="Uju-Bz-2tb">
                             <connections>
                                 <segue destination="58H-zS-85a" kind="presentation" id="b7T-qg-5eM"/>
@@ -215,7 +220,7 @@
         <!--Navigation Controller-->
         <scene sceneID="5CK-6r-z8R">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EHk-eZ-g6J" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="FeedNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="EHk-eZ-g6J" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fDq-dl-A1A">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
