--- a/Parstagram/Base.lproj/Main.storyboard
+++ b/Parstagram/Base.lproj/Main.storyboard
@@ -177,6 +177,28 @@
                                             <outlet property="nameLabel" destination="7uK-YV-DWi" id="Wry-Wo-wdn"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCommentCell" id="bfJ-l3-cww">
+                                        <rect key="frame" x="0.0" y="474" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bfJ-l3-cww" id="jkr-WF-kTD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a comment..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BqV-Nn-NUn">
+                                                    <rect key="frame" x="16" y="8" width="351" height="27.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.36492066062176165" green="0.36492066062176165" blue="0.36492066062176165" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="BqV-Nn-NUn" secondAttribute="bottom" constant="8" id="9l0-ce-vtS"/>
+                                                <constraint firstItem="BqV-Nn-NUn" firstAttribute="top" secondItem="jkr-WF-kTD" secondAttribute="top" constant="8" id="RF9-wM-xQu"/>
+                                                <constraint firstItem="BqV-Nn-NUn" firstAttribute="leading" secondItem="jkr-WF-kTD" secondAttribute="leading" constant="16" id="gAc-Ly-Pno"/>
+                                                <constraint firstAttribute="trailing" secondItem="BqV-Nn-NUn" secondAttribute="trailing" constant="8" id="yQa-B5-v0D"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
